--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,5 @@
 @charset "utf-8";
 
 @import "normalize-rails";
+@import "bootstrap";
 
-@import "bourbon";
-@import "neat";
-
-@import "base/base";
-@import "refills/flashes";
