--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 </head>
 <body class="<%= body_class %>">
   <%= render "shared/navbar" %>
+  <%= render "shared/nav_inline" if user_signed_in? %>
   <%= render "flashes" -%>
   <%= yield %>
   <%= render "javascript" %>
