--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,7 +1,25 @@
 <div class="container">
-  <% @accounts.each do |a| %>
-    <%= a.Name %>
-    <%= a.Id %>
+  <table class="table table-hover">
+    <thead class="thead-inverse">
+      <tr>
+        <th>Record ID</th>
+        <th>Account Name</th>
+        <th>Website</th>
+        <th colspan="3">Phone</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% @accounts.each do |account| %>
+      <tr>
+        <td><%= account.Id %></td>
+        <td><%= account.Name %></td>
+        <td><%= account.Website %></td>
+        <td><%= account.Phone %></td>
+        <td><%= link_to "Show", account_path(id: account.Id), class: "btn btn-sm btn-success" %></td>
+        <td><%= link_to "Delete", account_path(id: account.Id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %></td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
     <br />
-  <% end %>
 </div>
