WIP: Add simple authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
 </head>
 <body class="<%= body_class %>">
   <%= render "shared/navbar" %>
-  <%= render "shared/nav_inline" if user_signed_in? %>
-  <%= render "flashes" -%>
+  <%= render "shared/nav_inline" %>
+  <div class="container">
+    <%= render "flashes" -%>
+  </div>
   <%= yield %>
   <%= render "javascript" %>
   <%= render "css_overrides" %>
