--- a/app/views/shared/_nav_inline.html.erb
+++ b/app/views/shared/_nav_inline.html.erb
@@ -1,6 +1,6 @@
 <nav class="nav nav-inline">
   <div class="container">
-    <%= link_to "Accounts", "", class: "nav-link" %>
+    <%= link_to "Accounts", accounts_path, class: "nav-link" %>
     <%= link_to "Contacts", "", class: "nav-link" %>
     <%= link_to "Opportunities", "", class: "nav-link" %>
     <%= link_to "Leads", "", class: "nav-link" %>
