--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,11 @@
       <%= link_to 'Restforce', root_path, class: "navbar-brand" %>
       <ul class="nav navbar-nav">
         <li class="nav-item pull-xs-right">
-          <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+          <% if user_signed_in? %>
+            <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+          <% else %>
+            <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+          <% end %>
         </li>
       </ul>
     </div>
