Add styles to registration form
Because:
+ Just making it little more pretty

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -4,12 +4,16 @@
       <tr>
         <th>Id</th>
         <th>Name</th>
+        <th>Website</th>
+        <th>Phone</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td><%= @account.Id %></td>
         <td><%= @account.Name %></td>
+        <td><%= @account.Website %></td>
+        <td><%= @account.Phone %></td>
       </tr>
     </tbody>
   </table>
