--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,4 +2,11 @@
 
 @import "normalize-rails";
 @import "bootstrap";
+@import "font-awesome";
+
+@import "layout";
+@import "devise";
+
+@import "accounts";
+
 
