--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,18 @@
     https://github.com/calebthompson/title#usage
   %>
   <title><%= title %></title>
+  <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
   <%= stylesheet_link_tag :application, media: "all" %>
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= body_class %>">
   <%= render "shared/navbar" %>
-  <%= render "shared/nav_inline" %>
   <div class="container">
     <%= render "flashes" -%>
   </div>
   <%= yield %>
+  <%= render "shared/footer" %>
   <%= render "javascript" %>
   <%= render "css_overrides" %>
 </body>
