--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,12 +5,24 @@
     </button>
     <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
       <%= link_to 'Restforce', root_path, class: "navbar-brand" %>
-      <ul class="nav navbar-nav">
-        <li class="nav-item pull-xs-right">
+      <ul class="nav navbar-nav pull-xs-right">
+        <li class="nav-item">
+          <%= link_to "Accounts", accounts_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Contacts", "", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Opportunities", "", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Leads", "", class: "nav-link" %>
+        </li>
+        <li class="nav-item">
           <% if user_signed_in? %>
-            <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-link" %>
           <% else %>
-            <%= link_to 'Login', new_user_session_path, class: "nav-link" %>
+            <%= link_to 'Sign In', new_user_session_path, class: "nav-link" %>
           <% end %>
         </li>
       </ul>
