--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,10 @@
 @import "normalize-rails";
 @import "bootstrap";
 @import "font-awesome";
+@import "navbar";
 
 @import "layout";
+@import "buttons";
 @import "devise";
 
 @import "accounts";
