--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -1,3 +1,9 @@
-#accounts-container {
+#accounts-container,
+#accounts-show-container {
   margin-top: 50px;
+}
+
+#accounts-show-button-container {
+  margin-top: 50px;
+  text-align: center;
 }
