--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -6,7 +6,7 @@
           <th>Record ID</th>
           <th>Account Name</th>
           <th>Website</th>
-          <th colspan="3">Phone</th>
+          <th colspan="5">Phone</th>
         </tr>
       </thead>
       <tbody>
@@ -16,8 +16,21 @@
             <td><%= account.Name %></td>
             <td><%= account.Website %></td>
             <td><%= account.Phone %></td>
-            <td><%= link_to "Show", account_path(id: account.Id), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to "Delete", account_path(id: account.Id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-sm btn-danger" %></td>
+            <td>
+              <%= link_to account_path(id: account.Id), class: "btn btn-secondary" do %>
+                <i class="fa fa-search"></i>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to "", class: "btn btn-primary" do %>
+                <i class="fa fa-pencil"></i>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to account_path(id: account.Id), method: :delete, class: "btn btn-danger" do %>
+                <i class="fa fa-trash-o"></i>
+              <% end %>
+            </td>
           </tr>
         <% end %>
       </tbody>
