--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,20 +1,33 @@
-<div class="container">
-  <table class="table table-stripe">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Website</th>
-        <th>Phone</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><%= @account.Id %></td>
-        <td><%= @account.Name %></td>
-        <td><%= @account.Website %></td>
-        <td><%= @account.Phone %></td>
-      </tr>
-    </tbody>
-  </table>
+<div id="accounts-show-container">
+  <div class="container">
+    <table class="table table-stripe">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Name</th>
+          <th>Website</th>
+          <th>Phone</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= @account.Id %></td>
+          <td><%= @account.Name %></td>
+          <td><%= @account.Website %></td>
+          <td><%= @account.Phone %></td>
+        </tr>
+      </tbody>
+    </table>
+    <div id="accounts-show-button-container">
+      <%= link_to :back, class: "btn btn-secondary" do %>
+        <i class="fa fa-arrow-left"></i>
+      <% end %>
+      <%= link_to account_path, class: "btn btn-primary" do %>
+        <i class="fa fa-pencil"></i>
+      <% end %>
+      <%= link_to account_path, method: :delete, class: "btn btn-danger" do %>
+        <i class="fa fa-trash-o"></i>
+      <% end %>
+    </div>
+  </div>
 </div>
