Add style to account and user edit page :barber:
Just making it look pretty

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
 </head>
 <body class="<%= body_class %>">
   <%= render "shared/navbar" %>
-  <%= render "flashes" -%>
+  <!--
+    <=%= render "flashes" -%>
+  -->
   <%= yield %>
   <%= render "shared/footer" %>
   <%= render "javascript" %>
