--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,6 +1,7 @@
 #sign-in-form-container,
 #registration-form-container,
-#forgot-password-container {
+#forgot-password-container,
+#edit-user-container {
   margin-top: 50px;
   label, .help-block {
     font-size: 0.75em;
