--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,13 +18,18 @@
         <li class="nav-item">
           <%= link_to "Leads", "", class: "nav-link" %>
         </li>
+        <% if user_signed_in? %>
         <li class="nav-item">
-          <% if user_signed_in? %>
-            <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-link btn-sm btn-primary btn-sign-out" %>
-          <% else %>
-            <%= link_to 'Sign In', new_user_session_path, class: "nav-link btn-sm btn-primary btn-sign-in" %>
-          <% end %>
+          <%= link_to 'My Account', edit_user_registration_path, class: "nav-link btn-sm btn-success btn-sign-out" %>
         </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: "nav-link btn-sm btn-primary btn-sign-out" %>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to 'Sign In', new_user_session_path, class: "nav-link btn-sm btn-primary btn-sign-in" %>
+        </li>
+        <% end %>
       </ul>
     </div>
   </div>
