Add edit and update method for Accounts :facepunch:
Trying to make the methods like Rails vanilla app controller generator.
This can be refactored later, but simple CRUD is working with Salesforce
REST API through RESTFORCE gem :clap: :clap: :clap:

--- a/app/assets/stylesheets/accounts.scss
+++ b/app/assets/stylesheets/accounts.scss
@@ -1,6 +1,10 @@
 #accounts-container,
-#accounts-show-container {
+#accounts-show-container,
+#accounts-new-container {
   margin-top: 50px;
+  label, .help-block {
+    font-size: 0.75em;
+  }
 }
 
 #accounts-show-button-container {
