--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -22,7 +22,7 @@
               <% end %>
             </td>
             <td>
-              <%= link_to "", class: "btn btn-primary" do %>
+              <%= link_to edit_account_path(id: account.Id), class: "btn btn-primary" do %>
                 <i class="fa fa-pencil"></i>
               <% end %>
             </td>
