--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -7,37 +7,37 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card">
-          <%= image_tag "http://nakulpathak.com/assets/projects/rails_api-a6bf58d9a9826f72fe05ad85079ee88111294b1c4061718ae06f0a7dbca39963.png", class: "card-img-top img-fluid", alt: "Restforce" %>
+          <%= image_tag ("account.png"), class: "card-img-top img-fluid homepage-icons", alt: "Restforce" %>
           <div class="card-block">
             <p class="card-text">Manage your Accounts</p>
-            <%= link_to 'Accounts', accounts_path, class: "btn btn-block btn-primary" %>
+            <%= link_to 'Accounts', accounts_path, class: "btn btn-block btn-success-outline" %>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
-          <%= image_tag "http://nakulpathak.com/assets/projects/rails_api-a6bf58d9a9826f72fe05ad85079ee88111294b1c4061718ae06f0a7dbca39963.png", class: "card-img-top img-fluid", alt: "Restforce" %>
+          <%= image_tag ("contact.png"), class: "card-img-top img-fluid homepage-icons", alt: "Restforce" %>
           <div class="card-block">
             <p class="card-text">Manage your Contacts</p>
-            <%= link_to 'Contacts', "", class: "btn btn-block btn-primary" %>
+            <%= link_to 'Contacts', "", class: "btn btn-block btn-success-outline" %>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
-          <%= image_tag "http://nakulpathak.com/assets/projects/rails_api-a6bf58d9a9826f72fe05ad85079ee88111294b1c4061718ae06f0a7dbca39963.png", class: "card-img-top img-fluid", alt: "Restforce" %>
+          <%= image_tag ("opportunity.png"), class: "card-img-top img-fluid homepage-icons", alt: "Restforce" %>
           <div class="card-block">
             <p class="card-text">Manage your Opportunities</p>
-            <%= link_to 'Opportunities', "", class: "btn btn-block btn-primary" %>
+            <%= link_to 'Opportunities', "", class: "btn btn-block btn-success-outline" %>
           </div>
         </div>
       </div>
       <div class="col-md-3">
         <div class="card">
-          <%= image_tag "http://nakulpathak.com/assets/projects/rails_api-a6bf58d9a9826f72fe05ad85079ee88111294b1c4061718ae06f0a7dbca39963.png", class: "card-img-top img-fluid", alt: "Restforce" %>
+          <%= image_tag ("lead.png"), class: "card-img-top img-fluid homepage-icons", alt: "Restforce" %>
           <div class="card-block">
             <p class="card-text">Manage your Leads</p>
-            <%= link_to 'Leads', "", class: "btn btn-block btn-primary" %>
+            <%= link_to 'Leads', "", class: "btn btn-block btn-success-outline" %>
           </div>
         </div>
       </div>
