Add CRUD to Contacts
Same as Accounts, still need to fix Master Detail instruction

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,7 +19,7 @@
           <%= image_tag ("contact.png"), class: "card-img-top img-fluid homepage-icons", alt: "Restforce" %>
           <div class="card-block">
             <p class="card-text">Manage your Contacts</p>
-            <%= link_to 'Contacts', "", class: "btn btn-block btn-success-outline" %>
+            <%= link_to 'Contacts', contacts_path, class: "btn btn-block btn-success-outline" %>
           </div>
         </div>
       </div>
