--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,7 @@
 <div id="accounts-container">
   <div class="container">
+    <%= link_to 'New Account', new_account_path, class: 'btn btn-success btn-sm' %>
+    <br /><br />
     <table class="table table-hover">
       <thead>
         <tr>
