--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -19,10 +19,7 @@
       </tbody>
     </table>
     <div id="accounts-show-button-container">
-      <%= link_to :back, class: "btn btn-secondary" do %>
-        <i class="fa fa-arrow-left"></i>
-      <% end %>
-      <%= link_to account_path, class: "btn btn-primary" do %>
+      <%= link_to edit_account_path, class: "btn btn-primary" do %>
         <i class="fa fa-pencil"></i>
       <% end %>
       <%= link_to account_path, method: :delete, class: "btn btn-danger" do %>
