--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
           <%= link_to "Accounts", accounts_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Contacts", "", class: "nav-link" %>
+          <%= link_to "Contacts", contacts_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Opportunities", "", class: "nav-link" %>
